feat: Add API endpoint to get latest price prediction
