# packages/api-schema/src/openAPI/models.ts
@@ -8,3 +8,6 @@ export type LoginRequest = components['schemas']['LoginRequest']
 export type User = components['schemas']['User']
 export type Session = components['schemas']['Session']
 export type Asset = components['schemas']['Asset']
+export type PredictionType = components['schemas']['PredictionType']
+export type CreatePricePredictionPayload = components['schemas']['CreatePricePredictionPayload']
+export type PreviousPricePrediction = components['schemas']['PreviousPricePrediction']
